# GDI-engine

./: CMakeLists.txt  main.cpp
headers/: stdafx.h
headers/gui/: buttons.hpp
headers/gui/mics/: rectCorner.hpp
headers/gui/windows/: window.hpp
headers/mics/: BitmapHelper.hpp  Books.hpp  FileTXT.hpp  exception.hpp  helper.hpp  virtualClass.hpp
sourse/: stdafx.cpp
sourse/gui/: buttons.cpp
sourse/gui/windows/: window.cpp
sourse/mics/: Books.cpp  FileTXT.cpp  exception.cpp  helper.cpp  virtualClass.cpp
